adding minor changes

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"primary-color":"#307FFF","productWebUrl":"./index_md.html","productId":"t","keymaps":{},"productName":"tw","productVersion":"","stage":"release","downloadTitle":"Get tw","searchMaxHits":75,"color-preset":"contrast"}
+{"primary-color":"#307FFF","productWebUrl":"./index_md.html","productId":"t","keymaps":{},"productName":"Senior Technical Writer","productVersion":"","stage":"release","downloadTitle":"Get Senior Technical Writer","searchMaxHits":75,"color-preset":"contrast"}
